# kicker_to_pick

./: .gitignore  README.md  kicker_to_pick.py  pyproject.toml  scan-leagues.sh
.github/workflows/: ci.yml
logs/: Trötta Farsor Dynasty (2)_log.txt  Trötta Farsor Dynasty_log.txt
src/kicker_to_pick/: __init__.py  _version.py  kicker_to_pick.py
