[project]
name = "kicker-to-pick"
version = "0.1.0"
description = "A tool to convert Sleeper fantasy football kickers to draft picks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "mypy>=1.19.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # PEP 8
    "W",  # PEP 8 warnings
    "C",  # Complexity
    "N",  # Naming conventions
    "T",  # Type hints
    "PL", # Pylint settings
    "I",  # Isort
    "RUF", # Ruff-specific rules
    "D", # Docstrings
]
ignore = [
    "N815",  # Variable in class scope should not be mixedCase
]

[tool.mypy]
strict=true
ignore_missing_imports = true
disallow_untyped_decorators = false
